--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<h2>尚松博</h2>
 					<span style="color:#DD5044;">web前端工程师</span>
 			</div>
-			<ul class="col-lg-5 col-md-6 col- hidden-sm">
+			<ul class="col-lg-5 col-md-6 col- hidden-sm col-hidden-xs">
 				<li class="selected"><a href="#">首页</a> -</li>
 				<li><a href="http://blog.csdn.net/meetwithdo" target="_blank">我的博客</a> -</li>
 				<li><a href="https://github.com/ingkongshi" target="blank">GitHub</a>-</li>
@@ -33,10 +33,9 @@
 		  <div class="swiper-wrapper">
 		    <div class="swiper-slide" style="width: 100%;height: 100%;background: rgba(238,238,238,.5);">
 		    		<h1 class="ani" swiper-animate-effect="swing" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">关于我</h1>
-		    		<p class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="font-size: 18px; line-height: 40px;"
-						id="contxt">我叫尚松博；来自唐代大诗人王勃的故乡--河津；自从接触了计算机，就对它产生了浓厚的兴趣；都说兴趣是支撑人们不断前进的动力，因为兴趣，我接触到了这么有趣的东西----web前端，看到自己敲的代码完美的展现在网页中，很是开心；正因为兴趣才使我能坚持下来。
-						</p>
 						<div class="ppp col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+							<p >我叫尚松博；来自唐代大诗人王勃的故乡--河津；自从接触了计算机，就对它产生了浓厚的兴趣；都说兴趣是支撑人们不断前进的动力，因为兴趣，我接触到了这么有趣的东西----web前端，看到自己敲的代码完美的展现在网页中，很是开心；正因为兴趣才使我能坚持下来。
+					</p>
 							<p>无比欢快的奔向前端的“大坑”</p>
 							<p>踏实认真，重视细节 -- 一个具有工匠精神的小前端</p>
 							<p>一入前端深似海，一直学习不赶停 -- 日新月异的前端让人兴奋</p>
