--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/swiper.css"/>
 		<link rel="stylesheet" type="text/css" href="css/animate.css"/>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
+		<link rel="icon" type="text/css" href="img/ico.ico"/>
 		<script src="js/jquery-3.2.1.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/swiper.animate1.0.2.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/swiper.jquery.js" type="text/javascript" charset="utf-8"></script>
@@ -38,7 +39,7 @@
 					</p>
 							<p>无比欢快的奔向前端的“大坑”</p>
 							<p>踏实认真，重视细节 -- 一个具有工匠精神的小前端</p>
-							<p>一入前端深似海，一直学习不赶停 -- 日新月异的前端让人兴奋</p>
+							<p>一入前端深似海，一直学习不敢停 -- 日新月异的前端让人兴奋</p>
 						</div>
 		    </div>
 		    <div class="swiper-slide" style="width:300px;height: 300px;margin:0 auto; ">
