--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
 				pagination: '.swiper-pagination-0',
         		paginationClickable: true,
         		centeredSlides: true,
+        		mousewheelControl : true,
+				mousewheelInvert : false,
+				mousewheelReleaseOnEdges : true,
 				onInit: function(swiper){ //Swiper2.x的初始化是onFirstInit
 			      swiperAnimateCache(swiper); //隐藏动画元素
 			      swiperAnimate(swiper); //初始化完成开始动画
